Calibration and exclude_center for filter

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,9 @@ install_requires =
     dipy>=1.4
     packaging>=19.0
     numba==0.55.*
+    pandas==2.0.3
 
 [options.entry_points]
 console_scripts =
     aodf_filter = scripts.aodf_run_filter:main
+    aodf_calibrate_filter = scripts.aodf_calibrate_filter:main
